--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraFlix</title>
+     <link rel="stylesheet" href="style.css" />  
+     <title>AluraFlix</title>
 </head>
 
 <body>
@@ -17,4 +18,4 @@
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 
-</html>
+</html
